gcc/testsuite/rust/rustc/ui/issues/issue-2151_dg.rs
fn main() {
    let x = panic!(); // { dg-error ".E0282." "" { target *-*-* } }
    x.clone();
}

